# wasm-draw-pixel

./: .gitignore  README.md  package.json  tsconfig.json  webpack.config.js
.github/workflows/: cl.yml
app/: index.ts  style.scss  utils.ts
docs/: 1.index.js  278.index.js  index.js  index.wasm
public/: index.html
scripts/: rm.js
wasm/: Cargo.toml  LICENSE  README.md
wasm/src/: lib.rs
