[package]
name = "wasm-draw"
version = "0.1.0"
authors = ["ShineShao <xiaoshaoqq@gmail.com>"]
edition = "2021"
license = "MIT"
description="wasm draw pixel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
web-sys = "0.3.60"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Oz", "--enable-mutable-globals"]